
0.0.2-dev - ?
* New bindings :
  * getrlimit setrlimit
  * getpriority setpriority
  * ptrace (minimal)
  * renameat mkdirat
* Separate configure test for fsync and fdatasync

0.0.1 - 7 Nov 2010
* First release, implemented bindings :
  * fsync fdatasync
  * eventfd signalfd
  * statvfs fstatvfs
  * dirfd openat unlinkat fstatat
  * uname
  * fadvise fallocate
  * ttyname setpgid getpgid setreuid setregid
  * realpath
