@@ -1,7 +1,7 @@
 (* setup.ml generated for the first time by OASIS v0.2.0~alpha1 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: 0b156b09cdee0a3c51d8ba4e5fe1f14c) *)
+(* DO NOT EDIT (digest: 5b7224a3c3ba74bc7dbcd0cd4e3eb61c) *)
 (*
    Regenerated by OASIS v0.2.0~alpha1
    Visit http://oasis.forge.ocamlcore.org for more information and
@@ -5031,7 +5031,7 @@ let setup_t =
           synopsis = "Extended functions for OCaml Unix module";
           description =
             Some
-              "Thin bindings to various low-level system APIs (often non-portable)\nwhich are not covered by Unix module.\n\nSome of the implemented functions : uname, statvfs, fsync, fadvise,\nfallocate, openat, dirfd, eventfd, signalfd, setrlimit, etc";
+              "Thin bindings to various low-level system APIs (often non-portable)\nwhich are not covered by Unix module.\n\nSome of the implemented functions : uname, statvfs, fsync, fadvise,\nfallocate, openat, dirfd, eventfd, signalfd, setrlimit, mlockall, etc";
           categories = [];
           conf_type = ("internal", Some "0.2.0~alpha1");
           conf_custom =
@@ -5110,7 +5110,8 @@ let setup_t =
                            "stdlib.c";
                            "signalfd.c";
                            "ptrace.c";
-                           "resource.c"
+                           "resource.c";
+                           "mman.c"
                         ];
                       bs_data_files = [];
                       bs_ccopt =
