@@ -231,5 +231,6 @@ let () =
       S "getpriority"; S "setpriority"; S "getrlimit"; S "setrlimit";
       V "PRIO_PROCESS"; V "RLIMIT_NOFILE"; V "RLIM_INFINITY";
       ];
+    "MLOCKALL", L[ I "sys/mman.h"; S "mlockall"; S "munlockall"; V "MCL_CURRENT"; V "MCL_FUTURE"; ];
   ]
 
